--- a/ice40/CMakeLists.txt
+++ b/ice40/CMakeLists.txt
@@ -7,8 +7,6 @@ set(SOURCES
     archdefs.h
     arch.h
     arch_place.cc
-    arch_pybindings.cc
-    arch_pybindings.h
     bitstream.cc
     bitstream.h
     cells.cc
@@ -34,8 +32,19 @@ set(TEST_SOURCES
     tests/up5k.cc
 )
 
+if (PYTHON_API_NG)
+    set(PY_SOURCES
+        arch_pybindingsng.cc
+    )
+else()
+    set(PY_SOURCES
+        arch_pybindings.cc
+        arch_pybindings.h
+    )
+endif()
+
 add_nextpnr_architecture(${family}
-    CORE_SOURCES ${SOURCES}
+    CORE_SOURCES ${SOURCES} ${PY_SOURCES}
     TEST_SOURCES ${TEST_SOURCES}
     MAIN_SOURCE  main.cc
 )
