--- a/ecp5/CMakeLists.txt
+++ b/ecp5/CMakeLists.txt
@@ -7,8 +7,6 @@ set(SOURCES
     archdefs.h
     arch.h
     arch_place.cc
-    arch_pybindings.cc
-    arch_pybindings.h
     baseconfigs.cc
     bitstream.cc
     bitstream.h
@@ -29,8 +27,19 @@ set(SOURCES
     pio.h
 )
 
+if (PYTHON_API_NG)
+    set(PY_SOURCES
+        arch_pybindingsng.cc
+    )
+else()
+    set(PY_SOURCES
+        arch_pybindings.cc
+        arch_pybindings.h
+    )
+endif()
+
 add_nextpnr_architecture(${family}
-    CORE_SOURCES ${SOURCES}
+    CORE_SOURCES ${SOURCES} ${PY_SOURCES}
     MAIN_SOURCE  main.cc
 )
 
