build: Install python examples and REPL

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -22,4 +22,6 @@ if (BUILD_PYTHON)
 
 	set(NEXTPNR_PYTHON_LIBS "${NEXTPNR_DATA_DIR}/python")
 
+	install(DIRECTORY repl DESTINATION ${NEXTPNR_PYTHON_LIBS})
+	install(DIRECTORY examples DESTINATION ${NEXTPNR_PYTHON_LIBS})
 endif()
